--- a/src/themes/metro.scss
+++ b/src/themes/metro.scss
@@ -108,7 +108,10 @@ h1{
 
     .subtitle{
         font-weight: 400;
-        font-size: 1.5rem;
         text-transform: uppercase;
     }
+}
+
+h1 > .subtitle {
+    font-size: 1.5rem;
 }
